--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./build/index.js",
     "build": "tsc",
-    "dev": "nodemon src/index.ts --ignore \"src/db/data.json\""
+    "dev": "nodemon src/index.ts --ignore \"data.json\""
   },
   "devDependencies": {
     "@types/node": "^20.12.12",
@@ -16,6 +16,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "node-json-db": "^2.3.0",
     "openai": "^4.47.1",
