--- a/package.json
+++ b/package.json
@@ -5,11 +5,19 @@
   "scripts": {
     "start": "node ./build/index.js",
     "build": "tsc",
+    "test": "jest",
     "dev": "nodemon src/index.ts --ignore \"data.json\""
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.0",
+    "prettier": "^3.3.3",
+    "ts-jest": "^29.2.4",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "author": "",
